testdata/parser/negative/10.txt
Parse error at 10.pdl:8:5: Illegal nested synchronous statement
				synchronous {
				^
